# stgem

./: .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  INSTALLATION.md  LICENSE  MATLAB.md  PARAMETERS.md  README.md  SUT.md  compare.sync.ipynb  compare.sync.py  experiments.sh  generate-docs.sh  pyproject.toml  requirements.txt  run-f16.sh  run-load.sh  run-matlab-tests.sh  run-parser-tests.sh  run-sphinx.sh  run-tests.sh  stgem.py
doc/: Algorithm.md  SUT.md  matlab-guide.md  matlab.md
experiments/: arch-comp-2021-paper.sh  sbst-wogan-2022-paper.sh
jobs/: AT.json  conv.json  mo3d.json  mo3d_platypus.json  mo3dk.json  ogan.json  ogank.json  random.json  wogan.json
notebooks/: common.py  default.sync.ipynb  default.sync.py  losses.sync.ipynb  losses.sync.py  sbst_road_visualization.ipynb
parser/: generate-stuff.sh  parser.py  stlLexer.interp  stlLexer.py  stlParserVisitor.py  visitor.py
parser-tests/: test_and.py  test_finally.py  test_negation.py
src/: TODO  add_to_pregenerated_data.py  algorithms.py  analyzer.py  config.py  data_collection.py  evaluate.py  evaluate_analyzer.py  execute.py  explore.py  job.py  jobresult_figures.ipynb  logger.py  main.py  main_ogan.py  main_wgan.py  model.py  models.py  neural_networks.py  performance.py  preprocess_data.py  pretrain_analyzer.py  run_multiple_testsuites.py  sbst_collect_and_analyze.py  session.py  stgem.py  sut.py  test_repository.py  train_validator.py  validator.py
stgem/: __init__.py  analyze.py  budget.py  exceptions.py  experiment.py  generator.py  job.py  logger.py  performance.py  run.py  stgem.py  (+1 more)
(+307 files in other folders)
